testsuite/tests/properties/invalid_node_builder/bad_kwarg_type_1.lkt
import common_nonempty

@synthetic
class EmptyNode: FooNode {
}

class Example: BaseExample {
    @lazy prop1: SynthNode =
        SynthNode.builder(
            number=0,
            f1=EmptyNode.builder(),
            f2=node.parent
        ).build()
}
